--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ BOT_TOKEN = "8218088730:AAEttCIJd_DYeFYXgNb3s-ENSygqxAf6DNs"
 AUTH_CHANNEL = "-1003122695002"
 DATABASE = "mongodb+srv://educatedlucifer:lucifer007@cluster0.pzdd4sm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 TMDB_API = "63d4e8e29bbd86920b13c1750ccebba3"
-IMDB_API = ""
+IMDB_API = "imdb-api-lucifer.educatedlucifer.workers.dev"
 
 # SERVER
 BASE_URL = ""  
