--- a/.env
+++ b/.env
@@ -1,1 +1,26 @@
+# Startup Config
+API_ID = "9239475"
+API_HASH = "45bca1de511c5133d0d83e0f7f456bee"
+BOT_TOKEN = "8218088730:AAEttCIJd_DYeFYXgNb3s-ENSygqxAf6DNs"
+AUTH_CHANNEL = "-1003122695002"
+DATABASE = "mongodb+srv://educatedlucifer:lucifer007@cluster0.pzdd4sm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+TMDB_API = "63d4e8e29bbd86920b13c1750ccebba3"
+IMDB_API = "imdb-api-lucifer.educatedlucifer.workers.dev"
 
+# SERVER
+BASE_URL = ""  
+PORT = "8000"
+
+# Update
+UPSTREAM_REPO = ""
+UPSTREAM_BRANCH = "main"
+
+# Additional CDN Bots
+# MULTI_TOKEN1 = ""
+
+USE_CAPTION = "True"
+USE_TMDB = "True"
+OWNER_ID = "8001097291"
+
+# RENDER Specific
+NODE_ENV = "production"
