--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ TMDB_API = "63d4e8e29bbd86920b13c1750ccebba3"
 IMDB_API = "imdb-api-lucifer.educatedlucifer.workers.dev"
 
 # SERVER
-BASE_URL = ""  
+BASE_URL = "https://fyvio-unified.onrender.com"  
 PORT = "8000"
 
 # Update
