--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ IMDB_API = "imdb-api-lucifer.educatedlucifer.workers.dev"
 
 # SERVER
 BASE_URL = "https://fyvio-unified.onrender.com"  
+VITE_BASE_URL = "https://fyvio-unified.onrender.com"
 PORT = "8000"
 
 # Update
