--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ TMDB_API = "63d4e8e29bbd86920b13c1750ccebba3"
 IMDB_API = "imdb-api-lucifer.educatedlucifer.workers.dev"
 
 # SERVER
-BASE_URL = "https://fyvio-unified.onrender.com"  
-VITE_BASE_URL = "https://fyvio-unified.onrender.com"
+BASE_URL = "https://fyvio-unified-5bi0.onrender.com"  
+VITE_BASE_URL = "https://fyvio-unified-5bi0.onrender.com"
 PORT = "8000"
 
 # Update
